lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression instruction
Rule 2     expression -> instruction
Rule 3     instruction -> LCURLY expression RCURLY
Rule 4     instruction -> line SEMICOLON
Rule 5     instruction -> for_state
Rule 6     instruction -> ifelse_state
Rule 7     instruction -> while_state
Rule 8     line -> assign
Rule 9     line -> PRINT print_state
Rule 10    line -> BREAK
Rule 11    line -> CONTINUE
Rule 12    line -> RETURN print_state
Rule 13    line -> RETURN
Rule 14    print_state -> printable COMMA print_state
Rule 15    print_state -> printable
Rule 16    printable -> operation
Rule 17    printable -> STRING
Rule 18    assign -> object ASSIGN operation
Rule 19    assign -> object ADDASSIGN operation
Rule 20    assign -> object SUBASSIGN operation
Rule 21    assign -> object MULASSIGN operation
Rule 22    assign -> object DIVASSIGN operation
Rule 23    operation -> EYE LPAREN operation RPAREN
Rule 24    operation -> ZEROS LPAREN operation RPAREN
Rule 25    operation -> ONES LPAREN operation RPAREN
Rule 26    operation -> operation PLUS operation
Rule 27    operation -> operation MINUS operation
Rule 28    operation -> operation TIMES operation
Rule 29    operation -> operation DIVIDE operation
Rule 30    operation -> operation DOTADD operation
Rule 31    operation -> operation DOTSUB operation
Rule 32    operation -> operation DOTMUL operation
Rule 33    operation -> operation DOTDIV operation
Rule 34    operation -> MINUS operation
Rule 35    operation -> operation TRANSPOSE
Rule 36    operation -> object
Rule 37    operation -> number
Rule 38    operation -> matrix
Rule 39    bool -> LPAREN bool RPAREN
Rule 40    bool -> operation MORE operation
Rule 41    bool -> operation LESS operation
Rule 42    bool -> operation MOREOREQ operation
Rule 43    bool -> operation LESSOREQ operation
Rule 44    bool -> operation EQUALS operation
Rule 45    bool -> operation NOTEQUALS operation
Rule 46    object -> ID vector
Rule 47    object -> ID
Rule 48    ifelse_state -> IF LPAREN bool RPAREN instruction
Rule 49    ifelse_state -> IF LPAREN bool RPAREN instruction ELSE instruction
Rule 50    while_state -> WHILE LPAREN bool RPAREN instruction
Rule 51    for_state -> FOR ID ASSIGN forable COLON forable instruction
Rule 52    forable -> object
Rule 53    forable -> INT
Rule 54    matrix -> LSQUAR row RSQUAR
Rule 55    row -> row COMMA vector
Rule 56    row -> vector
Rule 57    vector -> LSQUAR elem RSQUAR
Rule 58    elem -> elem COMMA number
Rule 59    elem -> number
Rule 60    number -> INT
Rule 61    number -> FLOAT

Terminals, with rules where they appear

ADDASSIGN            : 19
ASSIGN               : 18 51
BREAK                : 10
COLON                : 51
COMMA                : 14 55 58
CONTINUE             : 11
DIVASSIGN            : 22
DIVIDE               : 29
DOTADD               : 30
DOTDIV               : 33
DOTMUL               : 32
DOTSUB               : 31
ELSE                 : 49
EQUALS               : 44
EYE                  : 23
FLOAT                : 61
FOR                  : 51
ID                   : 46 47 51
IF                   : 48 49
INT                  : 53 60
LCURLY               : 3
LESS                 : 41
LESSOREQ             : 43
LPAREN               : 23 24 25 39 48 49 50
LSQUAR               : 54 57
MINUS                : 27 34
MORE                 : 40
MOREOREQ             : 42
MULASSIGN            : 21
NOTEQUALS            : 45
ONES                 : 25
PLUS                 : 26
PRINT                : 9
RCURLY               : 3
RETURN               : 12 13
RPAREN               : 23 24 25 39 48 49 50
RSQUAR               : 54 57
SEMICOLON            : 4
STRING               : 17
SUBASSIGN            : 20
TIMES                : 28
TRANSPOSE            : 35
WHILE                : 50
ZEROS                : 24
error                : 

Nonterminals, with rules where they appear

assign               : 8
bool                 : 39 48 49 50
elem                 : 57 58
expression           : 1 3 0
for_state            : 5
forable              : 51 51
ifelse_state         : 6
instruction          : 1 2 48 49 49 50 51
line                 : 4
matrix               : 38
number               : 37 58 59
object               : 18 19 20 21 22 36 52
operation            : 16 18 19 20 21 22 23 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 40 40 41 41 42 42 43 43 44 44 45 45
print_state          : 9 12 14
printable            : 14 15
row                  : 54 55
vector               : 46 55 56
while_state          : 7

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression instruction
    (2) expression -> . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (51) for_state -> . FOR ID ASSIGN forable COLON forable instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (49) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (50) while_state -> . WHILE LPAREN bool RPAREN instruction
    (18) assign -> . object ASSIGN operation
    (19) assign -> . object ADDASSIGN operation
    (20) assign -> . object SUBASSIGN operation
    (21) assign -> . object MULASSIGN operation
    (22) assign -> . object DIVASSIGN operation
    (46) object -> . ID vector
    (47) object -> . ID

    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    expression                     shift and go to state 1
    instruction                    shift and go to state 2
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 1

    (0) S' -> expression .
    (1) expression -> expression . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (51) for_state -> . FOR ID ASSIGN forable COLON forable instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (49) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (50) while_state -> . WHILE LPAREN bool RPAREN instruction
    (18) assign -> . object ASSIGN operation
    (19) assign -> . object ADDASSIGN operation
    (20) assign -> . object SUBASSIGN operation
    (21) assign -> . object MULASSIGN operation
    (22) assign -> . object DIVASSIGN operation
    (46) object -> . ID vector
    (47) object -> . ID

    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    instruction                    shift and go to state 18
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 2

    (2) expression -> instruction .

    LCURLY          reduce using rule 2 (expression -> instruction .)
    PRINT           reduce using rule 2 (expression -> instruction .)
    BREAK           reduce using rule 2 (expression -> instruction .)
    CONTINUE        reduce using rule 2 (expression -> instruction .)
    RETURN          reduce using rule 2 (expression -> instruction .)
    FOR             reduce using rule 2 (expression -> instruction .)
    IF              reduce using rule 2 (expression -> instruction .)
    WHILE           reduce using rule 2 (expression -> instruction .)
    ID              reduce using rule 2 (expression -> instruction .)
    $end            reduce using rule 2 (expression -> instruction .)
    RCURLY          reduce using rule 2 (expression -> instruction .)


state 3

    (3) instruction -> LCURLY . expression RCURLY
    (1) expression -> . expression instruction
    (2) expression -> . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (51) for_state -> . FOR ID ASSIGN forable COLON forable instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (49) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (50) while_state -> . WHILE LPAREN bool RPAREN instruction
    (18) assign -> . object ASSIGN operation
    (19) assign -> . object ADDASSIGN operation
    (20) assign -> . object SUBASSIGN operation
    (21) assign -> . object MULASSIGN operation
    (22) assign -> . object DIVASSIGN operation
    (46) object -> . ID vector
    (47) object -> . ID

    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    expression                     shift and go to state 19
    instruction                    shift and go to state 2
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 4

    (4) instruction -> line . SEMICOLON

    SEMICOLON       shift and go to state 20


state 5

    (5) instruction -> for_state .

    LCURLY          reduce using rule 5 (instruction -> for_state .)
    PRINT           reduce using rule 5 (instruction -> for_state .)
    BREAK           reduce using rule 5 (instruction -> for_state .)
    CONTINUE        reduce using rule 5 (instruction -> for_state .)
    RETURN          reduce using rule 5 (instruction -> for_state .)
    FOR             reduce using rule 5 (instruction -> for_state .)
    IF              reduce using rule 5 (instruction -> for_state .)
    WHILE           reduce using rule 5 (instruction -> for_state .)
    ID              reduce using rule 5 (instruction -> for_state .)
    $end            reduce using rule 5 (instruction -> for_state .)
    RCURLY          reduce using rule 5 (instruction -> for_state .)
    ELSE            reduce using rule 5 (instruction -> for_state .)


state 6

    (6) instruction -> ifelse_state .

    LCURLY          reduce using rule 6 (instruction -> ifelse_state .)
    PRINT           reduce using rule 6 (instruction -> ifelse_state .)
    BREAK           reduce using rule 6 (instruction -> ifelse_state .)
    CONTINUE        reduce using rule 6 (instruction -> ifelse_state .)
    RETURN          reduce using rule 6 (instruction -> ifelse_state .)
    FOR             reduce using rule 6 (instruction -> ifelse_state .)
    IF              reduce using rule 6 (instruction -> ifelse_state .)
    WHILE           reduce using rule 6 (instruction -> ifelse_state .)
    ID              reduce using rule 6 (instruction -> ifelse_state .)
    $end            reduce using rule 6 (instruction -> ifelse_state .)
    RCURLY          reduce using rule 6 (instruction -> ifelse_state .)
    ELSE            reduce using rule 6 (instruction -> ifelse_state .)


state 7

    (7) instruction -> while_state .

    LCURLY          reduce using rule 7 (instruction -> while_state .)
    PRINT           reduce using rule 7 (instruction -> while_state .)
    BREAK           reduce using rule 7 (instruction -> while_state .)
    CONTINUE        reduce using rule 7 (instruction -> while_state .)
    RETURN          reduce using rule 7 (instruction -> while_state .)
    FOR             reduce using rule 7 (instruction -> while_state .)
    IF              reduce using rule 7 (instruction -> while_state .)
    WHILE           reduce using rule 7 (instruction -> while_state .)
    ID              reduce using rule 7 (instruction -> while_state .)
    $end            reduce using rule 7 (instruction -> while_state .)
    RCURLY          reduce using rule 7 (instruction -> while_state .)
    ELSE            reduce using rule 7 (instruction -> while_state .)


state 8

    (8) line -> assign .

    SEMICOLON       reduce using rule 8 (line -> assign .)


state 9

    (9) line -> PRINT . print_state
    (14) print_state -> . printable COMMA print_state
    (15) print_state -> . printable
    (16) printable -> . operation
    (17) printable -> . STRING
    (23) operation -> . EYE LPAREN operation RPAREN
    (24) operation -> . ZEROS LPAREN operation RPAREN
    (25) operation -> . ONES LPAREN operation RPAREN
    (26) operation -> . operation PLUS operation
    (27) operation -> . operation MINUS operation
    (28) operation -> . operation TIMES operation
    (29) operation -> . operation DIVIDE operation
    (30) operation -> . operation DOTADD operation
    (31) operation -> . operation DOTSUB operation
    (32) operation -> . operation DOTMUL operation
    (33) operation -> . operation DOTDIV operation
    (34) operation -> . MINUS operation
    (35) operation -> . operation TRANSPOSE
    (36) operation -> . object
    (37) operation -> . number
    (38) operation -> . matrix
    (46) object -> . ID vector
    (47) object -> . ID
    (60) number -> . INT
    (61) number -> . FLOAT
    (54) matrix -> . LSQUAR row RSQUAR

    STRING          shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    MINUS           shift and go to state 28
    ID              shift and go to state 14
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    LSQUAR          shift and go to state 34

    print_state                    shift and go to state 21
    printable                      shift and go to state 22
    operation                      shift and go to state 23
    object                         shift and go to state 29
    number                         shift and go to state 30
    matrix                         shift and go to state 31

state 10

    (10) line -> BREAK .

    SEMICOLON       reduce using rule 10 (line -> BREAK .)


state 11

    (11) line -> CONTINUE .

    SEMICOLON       reduce using rule 11 (line -> CONTINUE .)


state 12

    (12) line -> RETURN . print_state
    (13) line -> RETURN .
    (14) print_state -> . printable COMMA print_state
    (15) print_state -> . printable
    (16) printable -> . operation
    (17) printable -> . STRING
    (23) operation -> . EYE LPAREN operation RPAREN
    (24) operation -> . ZEROS LPAREN operation RPAREN
    (25) operation -> . ONES LPAREN operation RPAREN
    (26) operation -> . operation PLUS operation
    (27) operation -> . operation MINUS operation
    (28) operation -> . operation TIMES operation
    (29) operation -> . operation DIVIDE operation
    (30) operation -> . operation DOTADD operation
    (31) operation -> . operation DOTSUB operation
    (32) operation -> . operation DOTMUL operation
    (33) operation -> . operation DOTDIV operation
    (34) operation -> . MINUS operation
    (35) operation -> . operation TRANSPOSE
    (36) operation -> . object
    (37) operation -> . number
    (38) operation -> . matrix
    (46) object -> . ID vector
    (47) object -> . ID
    (60) number -> . INT
    (61) number -> . FLOAT
    (54) matrix -> . LSQUAR row RSQUAR

    SEMICOLON       reduce using rule 13 (line -> RETURN .)
    STRING          shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    MINUS           shift and go to state 28
    ID              shift and go to state 14
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    LSQUAR          shift and go to state 34

    print_state                    shift and go to state 35
    printable                      shift and go to state 22
    operation                      shift and go to state 23
    object                         shift and go to state 29
    number                         shift and go to state 30
    matrix                         shift and go to state 31

state 13

    (51) for_state -> FOR . ID ASSIGN forable COLON forable instruction

    ID              shift and go to state 36


state 14

    (46) object -> ID . vector
    (47) object -> ID .
    (57) vector -> . LSQUAR elem RSQUAR

    ASSIGN          reduce using rule 47 (object -> ID .)
    ADDASSIGN       reduce using rule 47 (object -> ID .)
    SUBASSIGN       reduce using rule 47 (object -> ID .)
    MULASSIGN       reduce using rule 47 (object -> ID .)
    DIVASSIGN       reduce using rule 47 (object -> ID .)
    PLUS            reduce using rule 47 (object -> ID .)
    MINUS           reduce using rule 47 (object -> ID .)
    TIMES           reduce using rule 47 (object -> ID .)
    DIVIDE          reduce using rule 47 (object -> ID .)
    DOTADD          reduce using rule 47 (object -> ID .)
    DOTSUB          reduce using rule 47 (object -> ID .)
    DOTMUL          reduce using rule 47 (object -> ID .)
    DOTDIV          reduce using rule 47 (object -> ID .)
    TRANSPOSE       reduce using rule 47 (object -> ID .)
    COMMA           reduce using rule 47 (object -> ID .)
    SEMICOLON       reduce using rule 47 (object -> ID .)
    MORE            reduce using rule 47 (object -> ID .)
    LESS            reduce using rule 47 (object -> ID .)
    MOREOREQ        reduce using rule 47 (object -> ID .)
    LESSOREQ        reduce using rule 47 (object -> ID .)
    EQUALS          reduce using rule 47 (object -> ID .)
    NOTEQUALS       reduce using rule 47 (object -> ID .)
    RPAREN          reduce using rule 47 (object -> ID .)
    COLON           reduce using rule 47 (object -> ID .)
    LCURLY          reduce using rule 47 (object -> ID .)
    PRINT           reduce using rule 47 (object -> ID .)
    BREAK           reduce using rule 47 (object -> ID .)
    CONTINUE        reduce using rule 47 (object -> ID .)
    RETURN          reduce using rule 47 (object -> ID .)
    FOR             reduce using rule 47 (object -> ID .)
    IF              reduce using rule 47 (object -> ID .)
    WHILE           reduce using rule 47 (object -> ID .)
    ID              reduce using rule 47 (object -> ID .)
    LSQUAR          shift and go to state 38

    vector                         shift and go to state 37

state 15

    (48) ifelse_state -> IF . LPAREN bool RPAREN instruction
    (49) ifelse_state -> IF . LPAREN bool RPAREN instruction ELSE instruction

    LPAREN          shift and go to state 39


state 16

    (50) while_state -> WHILE . LPAREN bool RPAREN instruction

    LPAREN          shift and go to state 40


state 17

    (18) assign -> object . ASSIGN operation
    (19) assign -> object . ADDASSIGN operation
    (20) assign -> object . SUBASSIGN operation
    (21) assign -> object . MULASSIGN operation
    (22) assign -> object . DIVASSIGN operation

    ASSIGN          shift and go to state 41
    ADDASSIGN       shift and go to state 42
    SUBASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 44
    DIVASSIGN       shift and go to state 45


state 18

    (1) expression -> expression instruction .

    LCURLY          reduce using rule 1 (expression -> expression instruction .)
    PRINT           reduce using rule 1 (expression -> expression instruction .)
    BREAK           reduce using rule 1 (expression -> expression instruction .)
    CONTINUE        reduce using rule 1 (expression -> expression instruction .)
    RETURN          reduce using rule 1 (expression -> expression instruction .)
    FOR             reduce using rule 1 (expression -> expression instruction .)
    IF              reduce using rule 1 (expression -> expression instruction .)
    WHILE           reduce using rule 1 (expression -> expression instruction .)
    ID              reduce using rule 1 (expression -> expression instruction .)
    $end            reduce using rule 1 (expression -> expression instruction .)
    RCURLY          reduce using rule 1 (expression -> expression instruction .)


state 19

    (3) instruction -> LCURLY expression . RCURLY
    (1) expression -> expression . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (51) for_state -> . FOR ID ASSIGN forable COLON forable instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (49) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (50) while_state -> . WHILE LPAREN bool RPAREN instruction
    (18) assign -> . object ASSIGN operation
    (19) assign -> . object ADDASSIGN operation
    (20) assign -> . object SUBASSIGN operation
    (21) assign -> . object MULASSIGN operation
    (22) assign -> . object DIVASSIGN operation
    (46) object -> . ID vector
    (47) object -> . ID

    RCURLY          shift and go to state 46
    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    instruction                    shift and go to state 18
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 20

    (4) instruction -> line SEMICOLON .

    LCURLY          reduce using rule 4 (instruction -> line SEMICOLON .)
    PRINT           reduce using rule 4 (instruction -> line SEMICOLON .)
    BREAK           reduce using rule 4 (instruction -> line SEMICOLON .)
    CONTINUE        reduce using rule 4 (instruction -> line SEMICOLON .)
    RETURN          reduce using rule 4 (instruction -> line SEMICOLON .)
    FOR             reduce using rule 4 (instruction -> line SEMICOLON .)
    IF              reduce using rule 4 (instruction -> line SEMICOLON .)
    WHILE           reduce using rule 4 (instruction -> line SEMICOLON .)
    ID              reduce using rule 4 (instruction -> line SEMICOLON .)
    $end            reduce using rule 4 (instruction -> line SEMICOLON .)
    RCURLY          reduce using rule 4 (instruction -> line SEMICOLON .)
    ELSE            reduce using rule 4 (instruction -> line SEMICOLON .)


state 21

    (9) line -> PRINT print_state .

    SEMICOLON       reduce using rule 9 (line -> PRINT print_state .)


state 22

    (14) print_state -> printable . COMMA print_state
    (15) print_state -> printable .

    COMMA           shift and go to state 47
    SEMICOLON       reduce using rule 15 (print_state -> printable .)


state 23

    (16) printable -> operation .
    (26) operation -> operation . PLUS operation
    (27) operation -> operation . MINUS operation
    (28) operation -> operation . TIMES operation
    (29) operation -> operation . DIVIDE operation
    (30) operation -> operation . DOTADD operation
    (31) operation -> operation . DOTSUB operation
    (32) operation -> operation . DOTMUL operation
    (33) operation -> operation . DOTDIV operation
    (35) operation -> operation . TRANSPOSE

    COMMA           reduce using rule 16 (printable -> operation .)
    SEMICOLON       reduce using rule 16 (printable -> operation .)
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    TIMES           shift and go to state 50
    DIVIDE          shift and go to state 51
    DOTADD          shift and go to state 52
    DOTSUB          shift and go to state 53
    DOTMUL          shift and go to state 54
    DOTDIV          shift and go to state 55
    TRANSPOSE       shift and go to state 56


state 24

    (17) printable -> STRING .

    COMMA           reduce using rule 17 (printable -> STRING .)
    SEMICOLON       reduce using rule 17 (printable -> STRING .)


state 25

    (23) operation -> EYE . LPAREN operation RPAREN

    LPAREN          shift and go to state 57


state 26

    (24) operation -> ZEROS . LPAREN operation RPAREN

    LPAREN          shift and go to state 58


state 27

    (25) operation -> ONES . LPAREN operation RPAREN

    LPAREN          shift and go to state 59


state 28

    (34) operation -> MINUS . operation
    (23) operation -> . EYE LPAREN operation RPAREN
    (24) operation -> . ZEROS LPAREN operation RPAREN
    (25) operation -> . ONES LPAREN operation RPAREN
    (26) operation -> . operation PLUS operation
    (27) operation -> . operation MINUS operation
    (28) operation -> . operation TIMES operation
    (29) operation -> . operation DIVIDE operation
    (30) operation -> . operation DOTADD operation
    (31) operation -> . operation DOTSUB operation
    (32) operation -> . operation DOTMUL operation
    (33) operation -> . operation DOTDIV operation
    (34) operation -> . MINUS operation
    (35) operation -> . operation TRANSPOSE
    (36) operation -> . object
    (37) operation -> . number
    (38) operation -> . matrix
    (46) object -> . ID vector
    (47) object -> . ID
    (60) number -> . INT
    (61) number -> . FLOAT
    (54) matrix -> . LSQUAR row RSQUAR

    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    MINUS           shift and go to state 28
    ID              shift and go to state 14
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    LSQUAR          shift and go to state 34

    operation                      shift and go to state 60
    object                         shift and go to state 29
    number                         shift and go to state 30
    matrix                         shift and go to state 31

state 29

    (36) operation -> object .

    PLUS            reduce using rule 36 (operation -> object .)
    MINUS           reduce using rule 36 (operation -> object .)
    TIMES           reduce using rule 36 (operation -> object .)
    DIVIDE          reduce using rule 36 (operation -> object .)
    DOTADD          reduce using rule 36 (operation -> object .)
    DOTSUB          reduce using rule 36 (operation -> object .)
    DOTMUL          reduce using rule 36 (operation -> object .)
    DOTDIV          reduce using rule 36 (operation -> object .)
    TRANSPOSE       reduce using rule 36 (operation -> object .)
    COMMA           reduce using rule 36 (operation -> object .)
    SEMICOLON       reduce using rule 36 (operation -> object .)
    MORE            reduce using rule 36 (operation -> object .)
    LESS            reduce using rule 36 (operation -> object .)
    MOREOREQ        reduce using rule 36 (operation -> object .)
    LESSOREQ        reduce using rule 36 (operation -> object .)
    EQUALS          reduce using rule 36 (operation -> object .)
    NOTEQUALS       reduce using rule 36 (operation -> object .)
    RPAREN          reduce using rule 36 (operation -> object .)


state 30

    (37) operation -> number .

    PLUS            reduce using rule 37 (operation -> number .)
    MINUS           reduce using rule 37 (operation -> number .)
    TIMES           reduce using rule 37 (operation -> number .)
    DIVIDE          reduce using rule 37 (operation -> number .)
    DOTADD          reduce using rule 37 (operation -> number .)
    DOTSUB          reduce using rule 37 (operation -> number .)
    DOTMUL          reduce using rule 37 (operation -> number .)
    DOTDIV          reduce using rule 37 (operation -> number .)
    TRANSPOSE       reduce using rule 37 (operation -> number .)
    COMMA           reduce using rule 37 (operation -> number .)
    SEMICOLON       reduce using rule 37 (operation -> number .)
    MORE            reduce using rule 37 (operation -> number .)
    LESS            reduce using rule 37 (operation -> number .)
    MOREOREQ        reduce using rule 37 (operation -> number .)
    LESSOREQ        reduce using rule 37 (operation -> number .)
    EQUALS          reduce using rule 37 (operation -> number .)
    NOTEQUALS       reduce using rule 37 (operation -> number .)
    RPAREN          reduce using rule 37 (operation -> number .)


state 31

    (38) operation -> matrix .

    PLUS            reduce using rule 38 (operation -> matrix .)
    MINUS           reduce using rule 38 (operation -> matrix .)
    TIMES           reduce using rule 38 (operation -> matrix .)
    DIVIDE          reduce using rule 38 (operation -> matrix .)
    DOTADD          reduce using rule 38 (operation -> matrix .)
    DOTSUB          reduce using rule 38 (operation -> matrix .)
    DOTMUL          reduce using rule 38 (operation -> matrix .)
    DOTDIV          reduce using rule 38 (operation -> matrix .)
    TRANSPOSE       reduce using rule 38 (operation -> matrix .)
    COMMA           reduce using rule 38 (operation -> matrix .)
    SEMICOLON       reduce using rule 38 (operation -> matrix .)
    MORE            reduce using rule 38 (operation -> matrix .)
    LESS            reduce using rule 38 (operation -> matrix .)
    MOREOREQ        reduce using rule 38 (operation -> matrix .)
    LESSOREQ        reduce using rule 38 (operation -> matrix .)
    EQUALS          reduce using rule 38 (operation -> matrix .)
    NOTEQUALS       reduce using rule 38 (operation -> matrix .)
    RPAREN          reduce using rule 38 (operation -> matrix .)


state 32

    (60) number -> INT .
